[gd_scene load_steps=16 format=2]

[ext_resource path="res://player/shoot/Shoot.gd" type="Script" id=1]
[ext_resource path="res://player/shoot/AK-47.obj" type="ArrayMesh" id=2]
[ext_resource path="res://player/shoot/Impact.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/shoot/rifle_shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://player/shoot/reload.wav" type="AudioStream" id=5]
[ext_resource path="res://font/Roboto-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://player/shoot/empty.wav" type="AudioStream" id=7]
[ext_resource path="res://player/shoot/Shell.tscn" type="PackedScene" id=8]
[ext_resource path="res://player/shoot/AK-47_Magazine.tscn" type="PackedScene" id=9]
[ext_resource path="res://player/shoot/M1911.obj" type="ArrayMesh" id=10]
[ext_resource path="res://player/shoot/pistol_shoot.wav" type="AudioStream" id=11]
[ext_resource path="res://player/shoot/Knife.obj" type="ArrayMesh" id=12]
[ext_resource path="res://player/Theme.tres" type="Theme" id=13]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Shoot" type="Spatial"]
script = ExtResource( 1 )
rifle_model = ExtResource( 2 )
pistol_model = ExtResource( 10 )
knife_model = ExtResource( 12 )
impact = ExtResource( 3 )
shell = ExtResource( 8 )
magazine = ExtResource( 9 )
rifle_shoot_sound = ExtResource( 4 )
pistol_shoot_sound = ExtResource( 11 )
reload_sound = ExtResource( 5 )
empty_sound = ExtResource( 7 )

[node name="BulletSpread" type="Position3D" parent="."]

[node name="RayCast" type="RayCast" parent="BulletSpread"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, -0.1, -0.2 )

[node name="SwitchAndAttack" type="Position3D" parent="Position3D"]

[node name="Bobbing" type="Position3D" parent="Position3D/SwitchAndAttack"]

[node name="LookAtLerp" type="Position3D" parent="Position3D/SwitchAndAttack/Bobbing"]

[node name="Sway" type="Position3D" parent="Position3D/SwitchAndAttack/Bobbing/LookAtLerp"]

[node name="MagazineSpawn" type="Position3D" parent="Position3D/SwitchAndAttack/Bobbing/LookAtLerp/Sway"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.11, -0.18 )

[node name="Weapon" type="MeshInstance" parent="Position3D/SwitchAndAttack/Bobbing/LookAtLerp/Sway"]
mesh = ExtResource( 2 )
material/0 = null

[node name="ShellSpawn" type="Position3D" parent="Position3D/SwitchAndAttack/Bobbing/LookAtLerp/Sway/Weapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.025, 0.01, -0.2 )

[node name="OmniLight" type="OmniLight" parent="Position3D/SwitchAndAttack/Bobbing/LookAtLerp/Sway/Weapon"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.7 )
light_energy = 0.0
shadow_enabled = true
omni_range = 2.0

[node name="MeleeAttack" type="Position3D" parent="Position3D/SwitchAndAttack"]

[node name="LookAt" type="Position3D" parent="Position3D"]

[node name="HUD" type="Control" parent="."]
modulate = Color( 0.811765, 0.498039, 0.0901961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 13 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AmmoBackgroundColor" type="ColorRect" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -360.667
margin_top = -64.0
margin_right = -90.6674
margin_bottom = -4.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoBackgroundColor2" type="ColorRect" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 90.0
margin_top = -64.0
margin_right = 305.0
margin_bottom = -4.0
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="VBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -251.0
margin_right = -4.0
margin_bottom = -150.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect1" type="ColorRect" parent="HUD/BackgroundColor"]
margin_top = 35.0
margin_right = 125.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 31 )
color = Color( 0, 0, 0, 0.25 )

[node name="ColorRect2" type="ColorRect" parent="HUD/BackgroundColor"]
margin_top = 70.0
margin_right = 125.0
margin_bottom = 101.0
rect_min_size = Vector2( 0, 31 )
color = Color( 0, 0, 0, 0.1 )

[node name="ColorRect3" type="ColorRect" parent="HUD/BackgroundColor"]
visible = false
margin_top = 70.0
margin_right = 146.0
margin_bottom = 101.0
rect_min_size = Vector2( 0, 31 )
color = Color( 0, 0, 0, 0.25098 )

[node name="WeaponSelected" type="VBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -126.0
margin_top = -286.0
margin_right = -4.0
margin_bottom = -150.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon1" type="Label" parent="HUD/WeaponSelected"]
margin_top = 70.0
margin_right = 122.0
margin_bottom = 101.0
text = "1     AK-47"

[node name="Weapon2" type="Label" parent="HUD/WeaponSelected"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_top = 105.0
margin_right = 122.0
margin_bottom = 136.0
text = "2     M1911"

[node name="Weapon3" type="Label" parent="HUD/WeaponSelected"]
visible = false
modulate = Color( 1, 1, 1, 0.501961 )
margin_top = 105.0
margin_right = 122.0
margin_bottom = 136.0
text = "3     Knife"

[node name="HealthText" type="Label" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -40.0
margin_right = 173.0
margin_bottom = -9.0
text = "Health"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoText" type="Label" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -40.0
margin_right = -230.0
margin_bottom = -9.0
text = "Ammo     "
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayAmmo" type="HBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -349.0
margin_top = -64.0
margin_right = -100.0
margin_bottom = -4.0
theme = SubResource( 2 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoText" type="Label" parent="HUD/DisplayAmmo"]
margin_left = 108.0
margin_right = 164.0
margin_bottom = 60.0
text = "30"

[node name="Slash" type="Label" parent="HUD/DisplayAmmo"]
margin_left = 168.0
margin_right = 189.0
margin_bottom = 60.0
text = "/"

[node name="ClipText" type="Label" parent="HUD/DisplayAmmo"]
margin_left = 193.0
margin_right = 249.0
margin_bottom = 60.0
text = "90"

[node name="DisplayHealth" type="HBoxContainer" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 210.0
margin_top = -64.0
margin_right = 338.0
margin_bottom = -4.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="HUD/DisplayHealth"]
margin_right = 84.0
margin_bottom = 60.0
text = "100"

[node name="ReloadTip" type="Label" parent="HUD"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = 35.0
margin_right = 136.0
margin_bottom = 71.0
text = "Reload"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootTween" type="Tween" parent="."]

[node name="ReloadTween" type="Tween" parent="."]

[node name="HBobbingTween" type="Tween" parent="."]

[node name="VBobbingTween" type="Tween" parent="."]

[node name="SwitchWeaponTween" type="Tween" parent="."]

[node name="InterfaceTween" type="Tween" parent="."]

[node name="BackgroundColorTween" type="Tween" parent="."]

[node name="SelectionTween" type="Tween" parent="."]

[node name="ReloadTipTween" type="Tween" parent="."]

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RecoilTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SpawnMagazineTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="tween_all_completed" from="ReloadTween" to="." method="_on_ReloadTween_tween_all_completed"]
[connection signal="timeout" from="RecoilTimer" to="." method="_on_RecoilTimer_timeout"]
[connection signal="timeout" from="SpawnMagazineTimer" to="." method="_on_SpawnMagazineTimer_timeout"]
